--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -76,7 +76,7 @@
     .info {
       position: relative;
       span {
-        font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
+        font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light' !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
@@ -100,7 +100,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'CompassSans-Regular','Gordita-Medium';
+      font-family: 'CompassSans-Regular','CompassSans-Medium';
       color: #224a69;
     }
 
