--- a/src/less/code.less
+++ b/src/less/code.less
@@ -10,7 +10,7 @@
     padding: 0 !important;
     margin: 30px auto;
     border-radius: 5px;
-    max-width: 90%;
+    max-width: 95%;
     @media(max-width: 600px) {
       max-width: none;
       margin-left: calc(~"-50vw + 50%") !important;
@@ -56,7 +56,7 @@
     margin: 0;
     height: 100%;
     font-size: 14px;
-    font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
+    /*font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;*/
     @media(max-width: 600px) {
       font-size: 12px;
     }
@@ -70,9 +70,10 @@
     margin: 0;
     font-weight: 200;
     line-height: 1.7;
-    padding: 0 30px 20px;
+    padding: 0 35px 20px;
     white-space: pre-wrap !important;
     color: #d3dce0;
+    font-family: 'dm';
     @media(max-width: 600px) {
       padding: 0 20px 20px;
     }
@@ -94,7 +95,7 @@
       position: relative;
       padding: 8px 40px;
       margin-left: -6%;
-      font-weight: 700;
+      opacity: .8;
       @media(max-width: 600px) {
         padding: 8px 15%;
       }
@@ -102,7 +103,7 @@
 
     * {
       font-size: 14px;
-      font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;
+      /*font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;*/
       margin: 0;
       @media(max-width: 600px) {
         font-size: 12px;
@@ -129,7 +130,6 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
       margin-left: -40px;
-      font-weight: 700;
     }
 
     .addition,
@@ -181,11 +181,13 @@
       color: #bc82d8;
     }
 
+    .keyword {
+      color: #00b1d5;
+    }
+
     .function,
     .function {
-      .keyword,
       .keyword {
-        /*color: #d667c1;*/
         color: #00b1d5;
       }
     }
@@ -219,7 +221,6 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
       margin-left: -40px;
-      font-weight: 700;
     }
   }
 
@@ -367,7 +368,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      font-weight: 700;
     }
   }
 
@@ -462,7 +462,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      font-weight: 700;
     }
   }
 
@@ -480,7 +479,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      font-weight: 700;
     }
   }
 
@@ -499,7 +497,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      font-weight: 700;
     }
   }
 
@@ -537,7 +534,6 @@
       text-rendering: auto;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      font-weight: 700;
     }
   }
 
@@ -633,7 +629,7 @@
       margin-left: -40px;
       width: 110%;
       height: auto;
-      background: #1d1e1f;
+      background: #12192E;
       content: "Javascript" !important;
       color: white;
       display: block;
@@ -643,7 +639,6 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
       margin-left: -40px;
-      font-weight: 700;
     }
   }
 }
