--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -250,7 +250,7 @@
         position: relative;
         bottom: 0;
         color: #162c52;
-        font-family: Gordita-Medium,Gordita-Light;
+        font-family: CompassSans-Medium,CompassSans-Light;
         width: auto;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -266,7 +266,7 @@
           line-height: 1.2;
           margin: 0;
           font-weight: 600;
-          font-family: Gordita-Regular;
+          font-family: CompassSans-Regular;
         }
 
         p {
@@ -276,7 +276,7 @@
           line-height: 1.5;
           text-align: left;
           font-weight: 100;
-          font-family: Gordita-Regular;
+          font-family: CompassSans-Regular;
           min-height: 42px;
 
           @media(max-width: 600px){
