--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -140,7 +140,7 @@
 	.contributors {
 		.single-author-name {
 			font-size: 0.9em !important;
-			font-family: Gordita-Medium, sans-serif !important;
+			font-family: CompassSans-Medium, sans-serif !important;
 		}
 
 		.role {
@@ -204,7 +204,7 @@
 				margin: 0 8px 8px 0;
 				flex-grow: 1;
 				text-align: center;
-				font-family: Gordita-Regular;
+				font-family: CompassSans-Regular;
 				transition: all 0.3s easeout;
 				border-bottom: 1px solid #2d5f84;
 				border-right: 1px solid #2d5f84;
@@ -356,7 +356,7 @@
 					font-size: 0.95em;
 					margin: 0;
 					line-height: 1.4;
-					font-family: Gordita-Medium,sans-serif !important;
+					font-family: CompassSans-Medium,sans-serif !important;
 					font-weight: 500;
 					display: block;
 
@@ -374,7 +374,7 @@
 						font-size: 0.8em;
 						margin-top: 2px;
 						font-weight: 200;
-						font-family: Gordita-Regular,sans-serif;
+						font-family: CompassSans-Regular,sans-serif;
 					}
 				}
 
@@ -388,7 +388,7 @@
 					font-size: 0.8em;
 					margin-top: 9px;
 					font-weight: 200;
-					font-family: 'Gordita-Regular', sans-serif;
+					font-family: 'CompassSans-Regular', sans-serif;
 
 					a {
 						color: @white;
