--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -55,7 +55,7 @@
 
     li {
       display: inline-block;
-      font-family: 'Gordita-Medium', 'Gordita-Light';
+      font-family: 'CompassSans-Medium', 'CompassSans-Light';
       color: #444;
       font-size: 1.1em;
       border: 0;
@@ -188,7 +188,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: Gordita-Medium;
+      font-family: CompassSans-Medium;
       font-size: 1em;
     }
 
