--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'Gordita-Regular', sans-serif;
+	font-family: 'CompassSans-Regular', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -36,7 +36,7 @@ section {
 }
 
 strong {
-  font-family: Gordita-Medium,Gordita-Light;
+  font-family: CompassSans-Medium,CompassSans-Light;
   font-weight: 500;
 }
 
@@ -49,7 +49,7 @@ strong {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'HackerSans-Medium', 'CompassSans-Regular', 'Gordita-Medium', sans-serif;
+	font-family: 'HackerSans-Medium', 'CompassSans-Regular', 'CompassSans-Medium', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -63,14 +63,14 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'CompassSans-Regular', 'Gordita-Medium', serif;
+	font-family: 'CompassSans-Regular', 'CompassSans-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
 }
 
 h3 {
-	font-family: 'Gordita-Medium', serif;
+	font-family: 'CompassSans-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
@@ -84,7 +84,7 @@ h1 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'CompassSans-Medium', 'Gordita-Medium';
+	font-family: 'CompassSans-Medium', 'CompassSans-Medium';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -114,7 +114,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'Gordita-Medium', serif;
+	font-family: 'CompassSans-Medium', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
