--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -84,7 +84,7 @@
       line-height: 1.2;
       margin-bottom: 15px;
       text-align: left;
-      font-family: CompassSans-Medium,Gordita-Medium,serif;
+      font-family: CompassSans-Medium,CompassSans-Medium,serif;
       @media(max-width: 600px) {
         font-size: 1.3em;
         margin-bottom: 5px;
@@ -99,7 +99,7 @@
       font-size: 15px;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: Gordita-Regular!important;
+      font-family: CompassSans-Regular!important;
       -webkit-line-clamp: 6;
       overflow: hidden;
       text-align: left;
