--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -40,7 +40,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			 text-overflow: ellipsis;
-			font-family: 'Gordita-Regular',sans-serif !important;
+			font-family: 'CompassSans-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: .9em;
 			font-weight: 500;
@@ -128,7 +128,7 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'HackerSans-Medium', 'CompassSans-Medium',Gordita-Regular,serif;
+			font-family: 'HackerSans-Medium', 'CompassSans-Medium',CompassSans-Regular,serif;
 			@media(max-width: 600px) {
 				font-size: 1em;
 				font-family: HackerSans-Regular;
@@ -177,7 +177,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'CompassSans-Regular','Gordita-Regular',serif;
+		font-family: 'CompassSans-Regular','CompassSans-Regular',serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -191,7 +191,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'CompassSans-Regular','Gordita-Regular';
+			font-family: 'CompassSans-Regular','CompassSans-Regular';
 		}
 
 		.author-mobile {
@@ -217,7 +217,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'CompassSans-Regular','Gordita-Medium';
+				font-family: 'CompassSans-Regular','CompassSans-Medium';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -227,7 +227,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light';
+			font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -287,7 +287,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'CompassSans-Regular','Gordita-Regular', 'Gordita-Light' !important;
+					font-family: 'CompassSans-Regular','CompassSans-Regular', 'CompassSans-Light' !important;
 					color: #627d90;
 					line-height: 1;
 					overflow: hidden;
@@ -304,7 +304,7 @@
 
 			&.date {
 				span {
-					font-family: 'CompassSans-Regular',Gordita-Regular,sans-serif;
+					font-family: 'CompassSans-Regular',CompassSans-Regular,sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -369,7 +369,7 @@
 
 	.btn {
 		font-size: 16px;
-		font-family: 'Gordita-Medium',serif;
+		font-family: 'CompassSans-Medium',serif;
 		text-transform: uppercase;
 		padding: 14px 20px;
 		line-height: 1;
@@ -389,7 +389,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: Gordita-Regular,serif;
+			font-family: CompassSans-Regular,serif;
 		}
 	}
 }
