--- a/src/less/signup.less
+++ b/src/less/signup.less
@@ -17,7 +17,7 @@
     width: 258px;
     margin: 30px auto auto;
     text-align: center;
-    font-family: Gordita-Medium;
+    font-family: CompassSans-Medium;
     line-height: 1.35;
     text-transform: uppercase;
     position: absolute;
@@ -216,7 +216,7 @@ button {
   font-size: 1em;
   font-weight: 300;
   letter-spacing: 0.8px;
-  font-family: Gordita-Medium;
+  font-family: CompassSans-Medium;
 }
 
 .float-left {
