--- a/src/less/table.less
+++ b/src/less/table.less
@@ -6,7 +6,7 @@ table, th, td {
 }
 
 table {
-  width:90%;
+  width:95%;
   display: table;
   border-collapse: collapse;
   border-spacing: 0;
@@ -36,11 +36,11 @@ table {
 
     th {
       text-align: center;
-      font-family: Gordita-Medium;
+      font-family: CompassSans-Medium;
       min-width: 30px;
 
       &::before{
-         font-family: Gordita-Medium!important;
+         font-family: CompassSans-Medium!important;
       }
     }
   }
@@ -134,7 +134,7 @@ td, th{
       width: 120px;
       height: 100%;
       th {
-        font-family: Gordita-Medium;
+        font-family: CompassSans-Medium;
         text-align: center;
       }
 
@@ -209,7 +209,7 @@ td, th{
 
 .dataframe thead th {
   text-align: center !important;
-  font-family: 'Gordita-Medium' !important;
+  font-family: 'CompassSans-Medium' !important;
 }
 
 .dataframe tbody tr th:only-of-type {
