--- a/src/less/author.less
+++ b/src/less/author.less
@@ -67,7 +67,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'Gordita-Medium', 'Gordita-Light', sans-serif;
+						font-family: 'CompassSans-Medium', 'CompassSans-Light', sans-serif;
 					}
 
 					.country,
@@ -255,7 +255,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'Gordita-Medium', 'Gordita-Light', sans-serif;
+			font-family: 'CompassSans-Medium', 'CompassSans-Light', sans-serif;
 		}
 
 		i {
