--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -83,7 +83,7 @@
 
       .textarea-container {
         width: 100%;
-        font-family: Gordita-Regular;
+        font-family: CompassSans-Regular;
         /* max-width: 500px; */
         border: 1px solid #dcdcdc;
         border-radius: 0;
@@ -110,7 +110,7 @@
           -o-transition: height 0.15s cubic-bezier(.4,0,1,1);
           transition: height 0.15s cubic-bezier(.4,0,1,1);
           font-size: 1em;
-          font-family: 'Gordita-Regular';
+          font-family: 'CompassSans-Regular';
           min-height: 70px;
           width: -webkit-fill-available;
         }
@@ -161,7 +161,7 @@
           overflow: hidden;
           margin-left: 20px;
           font-size: 1em;
-          font-family: Gordita-Regular;
+          font-family: CompassSans-Regular;
           min-height: 70px;
           width: -webkit-fill-available;
 
