--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -38,7 +38,7 @@
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'Gordita-Regular',serif;
+		font-family: 'CompassSans-Regular',serif;
 	}
 
 	.avatar {
