--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -207,7 +207,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'CompassSans-Regular',Gordita-Medium;
+        font-family: 'CompassSans-Regular',CompassSans-Medium;
         /*  &::after {
           content: "";
           width: 90px;
@@ -247,7 +247,7 @@
 
           h5 {
             font-size: .9em;
-            font-family: 'Gordita-Regular';
+            font-family: 'CompassSans-Regular';
             color: #3c3d46;
             line-height: 1.2;
             font-weight: 100;
@@ -369,7 +369,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'Gordita-Regular';
+                font-family: 'CompassSans-Regular';
                 margin-right: 5px;
               }
 
