--- a/src/less/post.less
+++ b/src/less/post.less
@@ -94,7 +94,7 @@
 		margin: 40px 0 10px;
 		color: #276890;
 		line-height: 1.3;
-		font-family: 'Gordita-Regular';
+		font-family: 'CompassSans-Regular';
 		font-weight: 600!important;
 		font-size: 2em;
 		font-size: 1.8em;
@@ -126,6 +126,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 12px;
+		font-family: 'CompassSans-Medium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -141,7 +142,7 @@
 	}
 
 	p {
-		text-align: justify;
+		text-align: left;
 		font-size: 1em;
 		line-height: 1.7;
 		@media(max-width: 600px) {
@@ -261,7 +262,7 @@
 
 		p {
 			line-height: 1.5!important;
-			font-family: Gordita-Regular;
+			font-family: CompassSans-Regular;
 			color: #69a07a;
 			font-size: 0.9em;
 			width: 100%;
@@ -332,7 +333,7 @@
 				}
 
 				span {
-					font-family: 'Gordita-Regular',sans-serif;
+					font-family: 'CompassSans-Regular',sans-serif;
 					font-weight: 500;
 				}
 
@@ -341,7 +342,7 @@
 					padding: 6px 10px;
 
 					span {
-						font-family: 'Gordita-Medium',sans-serif !important;
+						font-family: 'CompassSans-Medium',sans-serif !important;
 					}
 					@media(max-width: 600px) {
 						height: 18px !important;
@@ -465,7 +466,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'Gordita-Regular';
+			font-family: 'CompassSans-Regular';
 		}
 
 		p > a {
@@ -492,6 +493,10 @@
 			font-size: 0.9em;
 			line-height: 2;
 			overflow: hidden;
+			margin: 30px auto;
+			border-radius: 5px;
+			max-width: 88%;
+
 			@media(max-width: 600px) {
 				line-height: 1.8;
 			}
@@ -538,7 +543,7 @@
 			background: #e0eef3;
 			color: #32687b;
 			padding: 20px;
-			font-family: 'Gordita-Regular',sans-serif;
+			font-family: 'CompassSans-Regular',sans-serif;
 			font-style: normal;
 			font-size: 1em;
 			line-height: 1.6;
@@ -547,7 +552,7 @@
 			font-style: italic;
 
 			* {
-				font-family: Gordita-Regular,sans-serif;
+				font-family: CompassSans-Regular,sans-serif;
 				font-style: normal;
 				font-size: 0.9em;
 				line-height: 1.6;
@@ -816,7 +821,7 @@
 .post-template {
 	figure {
 		width: fit-content;
-		max-width: 90%;
+		max-width: 95%;
 		margin: 30px auto 30px;
 		overflow: visible;
 		box-shadow: 1px 0px 1px rgba(154, 154, 165, 0.27);
@@ -884,9 +889,9 @@
 		}
 
 		.avatar {
-			width: 150px;
-			height: 150px;
-			min-width: 150px;
+			width: 70px;
+			height: 70px;
+			min-width: 70px;
 			display: inline-block;
 			overflow: hidden;
 			margin-right: 30px;
@@ -930,7 +935,7 @@
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 10px;
-			font-family: 'Gordita-Medium', 'Gordita-Light';
+			font-family: 'CompassSans-Medium', 'CompassSans-Light';
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
