--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -35,7 +35,7 @@
 			width: 90%;
 			color: #234969;
 			font-size: 1em;
-			font-family: 'CompassSans-Light',Gordita-Light,sans-serif!important;
+			font-family: 'CompassSans-Light',CompassSans-Light,sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -67,7 +67,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: CompassSans-Light,Gordita-Light,sans-serif!important;
+		font-family: CompassSans-Light,CompassSans-Light,sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -164,7 +164,7 @@
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
 			background: #daecff;
-			font-family: Gordita-Regular;
+			font-family: CompassSans-Regular;
 			flex-grow: 1;
 			text-align: center;
 			.transition(all 0.2s ease);
@@ -307,7 +307,7 @@
 				letter-spacing: 0;
 				font-size: 16px;
 				margin: 0;
-				font-family: CompassSans-Regular,Gordita-Medium,Gordita-Light,sans-serif;
+				font-family: CompassSans-Regular,CompassSans-Medium,CompassSans-Light,sans-serif;
 				font-weight: 500;
 				display: inline-block;
 			}
@@ -385,7 +385,7 @@
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
+			font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
 			font-weight: 100;
 			display: inline-block;
 
@@ -413,7 +413,7 @@
 			letter-spacing: 1px;
 			margin-top: 0;
 			white-space: nowrap;
-			font-family: CompassSans-Medium,Gordita-Medium,serif;
+			font-family: CompassSans-Medium,CompassSans-Medium,serif;
 			@media(max-width: 1040px) {
 				font-size: 1.3em;
 			}
@@ -430,7 +430,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
+			font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 600 !important;
@@ -451,7 +451,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: HackerSans-Medium,Gordita-Medium,serif;
+		font-family: HackerSans-Medium,CompassSans-Medium,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -461,7 +461,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: CompassSans-Medium,Gordita-Medium,serif;
+		font-family: CompassSans-Medium,CompassSans-Medium,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -523,7 +523,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'Gordita-Regular', 'Gordita-Light', sans-serif;
+				font-family: 'CompassSans-Regular', 'CompassSans-Light', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
