--- a/src/less/author.less
+++ b/src/less/author.less
@@ -85,7 +85,7 @@
 					background: #fafafa;
 					padding: 15px;
 					margin-bottom: 10px;
-					transition: all 0.2s easeout;
+					transition: all 0.2s ease-out;
 
 					&:hover {
 						background: #d5f0f3;
@@ -125,7 +125,7 @@
 							min-height: 36px;
 							height: 38px;
 							margin-right: 15px;
-							transition: all 0.2s easeout;
+							transition: all 0.2s ease-out;
 
 							&:hover {
 								background: #797979;
