--- a/src/less/code.less
+++ b/src/less/code.less
@@ -242,7 +242,7 @@
     height: fit-content;
     color: #6c8699;
     cursor: pointer;
-    transition: all 0.3s easeout;
+    transition: all 0.3s ease-out;
     display: none;
     z-index: 1;
 
@@ -629,7 +629,7 @@
       margin-left: -40px;
       width: 110%;
       height: auto;
-      background: #12192E;
+      background: #23232e;
       content: "Javascript" !important;
       color: white;
       display: block;
