--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -81,7 +81,7 @@
     padding: 6px 14px;
     line-height: 1.3;
     background: @theme-color;
-    transition: 0.2s all easeout;
+    transition: 0.2s all ease-out;
     @media(max-width: 800px) {
       padding: 8px 12px;
       font-size: 0.7em;
@@ -161,10 +161,10 @@
       font-size: 0.9em;
       border-top: 0;
       width: auto;
-      transition: 0.2s all easeout;
+      transition: 0.2s all ease-out;
       background-color: #f7f7fb;
       padding: 10px 16px;
-      transition: 0.2s all easeout;
+      transition: 0.2s all ease-out;
       border-bottom: 1px solid #d1d7dc;
       border-right: 1px solid #d1d7dc;
       border-left: 0;
