--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -37,7 +37,7 @@
 
   .logo {
     height: 42px;
-    transition: all 0.3s easeout;
+    transition: all 0.3s ease-out;
 
     &:hover {
       cursor: pointer;
