--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -51,7 +51,7 @@
       font-size: 15px;
       text-transform: uppercase;
       border: none;
-      transition: all 0.3s easeout;
+      transition: all 0.3s ease-out;
 
       &:hover {
         background: @secondary-color;
@@ -170,7 +170,7 @@
       background: #b8d2c9;
       color: #316f45;
       display: none;
-      transition: all .3s easeout;
+      transition: all .3s ease-out;
 
       &::before {
         content: "\f00c";
@@ -191,7 +191,7 @@
       padding: 5px;
       color: #004800;
       display: none;
-      transition: all .3s easeout;
+      transition: all .3s ease-out;
 
       &::before {
         content: "\f00c";
