--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -157,7 +157,7 @@
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
-			font-size: 0.8em !important;
+			font-size: 0.9em !important;
 			-webkit-transition: all 0.2s ease;
 			-moz-transition: all 0.2s ease;
 			-ms-transition: all 0.2s ease;
@@ -259,7 +259,7 @@
 				color: white;
 				border: 0;
 				text-transform: Uppercase;
-				transition: all 0.3s easeout;
+				transition: all 0.3s ease-out;
 
 				span {
 					font-size: 14px;
@@ -421,7 +421,7 @@
 
 		p {
 			margin: 0;
-			font-size: 15px;
+			font-size: 1em;
 			line-height: 1.8;
 			padding-right: 0;
 		}
@@ -560,7 +560,7 @@
 
 		.news-description {
 			margin-bottom: 15px;
-			font-size: 0.85em;
+			font-size: 0.9em;
 			line-height: 1.8;
 		}
 
