--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -48,7 +48,7 @@
 			text-align: justify;
 			margin-top: 0;
 			color: white;
-			font-weight: 600;
+
 			@media(max-width: 800px) {
 				margin-bottom: 15px;
 				text-align: left;
@@ -63,7 +63,7 @@
 			color: #fff;
 			border: 0;
 			text-transform: Uppercase;
-			transition: all 0.3s easeout;
+			transition: all 0.3s ease-out;
 		}
 
 		.form-group {
@@ -96,7 +96,7 @@
 			color: white;
 			border: 0;
 			text-transform: Uppercase;
-			transition: all 0.3s easeout;
+			transition: all 0.3s ease-out;
 
 			span {
 				font-size: 14px;
@@ -197,7 +197,7 @@
 				color: #fff;
 				background: #325e90;
 				padding: 4px 12px;
-				font-size: 0.85em;
+				font-size: 0.9em;
 				display: inline-block;
 				height: fit-content;
 				width: fit-content;
@@ -205,7 +205,7 @@
 				flex-grow: 1;
 				text-align: center;
 				font-family: CompassSans-Regular;
-				transition: all 0.3s easeout;
+				transition: all 0.3s ease-out;
 				border-bottom: 1px solid #2d5f84;
 				border-right: 1px solid #2d5f84;
 
@@ -263,7 +263,7 @@
 				color: #fff;
 				border: 0;
 				text-transform: Uppercase;
-				transition: all 0.3s easeout;
+				transition: all 0.3s ease-out;
 			}
 
 			.newsletter {
@@ -301,7 +301,7 @@
 					color: white;
 					border: 0;
 					text-transform: Uppercase;
-					transition: all 0.3s easeout;
+					transition: all 0.3s ease-out;
 
 					span {
 						font-size: 14px;
