--- a/src/less/code.less
+++ b/src/less/code.less
@@ -13,8 +13,8 @@
     max-width: 95%;
     @media(max-width: 600px) {
       max-width: none;
-      margin-left: calc(~"-50vw + 50%") !important;
-      margin-right: calc(~"-50vw + 50%") !important;
+      /*margin-left: calc(~"-50vw + 50%") !important;
+      margin-right: calc(~"-50vw + 50%") !important;*/
       width: auto !important;
       white-space: pre-line !important;
       max-height: 400px;
