--- a/src/less/post.less
+++ b/src/less/post.less
@@ -620,12 +620,12 @@
 	figcaption {
 		text-align: center;
 		margin: 0 auto 0;
-		font-size: 13px;
-		color: #8d929a;
+		font-size: .9em;
+		color: #5e6167;
 		white-space: nowrap;
 		font-style: italic;
 		background-color: rgba(33, 69, 138, 0.04);
-		padding: 15px 0;
+		padding: 10px 0;
 		margin-top: -10px;
 		width: 100%;
 		@media(max-width: 600px) {
