--- a/src/less/post.less
+++ b/src/less/post.less
@@ -492,6 +492,7 @@
 			margin: 30px auto;
 			border-radius: 5px;
 			max-width: 88%;
+			line-height: 1.5;
 
 			@media(max-width: 600px) {
 				line-height: 1.8;
