--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -11,7 +11,8 @@
     margin: 5px 30px;
     width: -webkit-fill-available;
     max-width: none;
-    height: 150px !important;
+    min-height: 100px;
+    height: fit-content !important;
     border-right: 2px solid #dcdcdc!important;
     border-bottom: 2px solid #dcdcdc!important;
     display: flex;
@@ -22,10 +23,6 @@
       flex-direction: row;
       height: 100%;
 
-
-      @media(max-width: 600px) {
-        height: auto;
-      }
     }
   }
 
@@ -42,7 +39,7 @@
     @media(max-width: 600px) {
       width: 35%;
       height: 100%;
-      min-width: 160px;
+      min-width: 120px;
     }
   }
 
@@ -51,6 +48,10 @@
     font-size: 1.2em !important;
     margin-top: 0 !important;
     min-height: 42px;
+
+    @media(max-width: 600px){
+      font-size: 1em !important;
+    }
   }
 
   .author-mobile {
@@ -112,6 +113,10 @@
   .description {
     padding: 20px;
     color: @text-color;
+
+    @media(max-width: 600px){
+      padding: 15px;
+    }
 
     p {
       font-size: 0.8em;
