--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -23,6 +23,10 @@
       flex-direction: row;
       height: 100%;
 
+      @media(max-width: 600px) {
+        min-width: 120px;
+      }
+
     }
   }
 
