--- a/src/less/code.less
+++ b/src/less/code.less
@@ -97,7 +97,7 @@
       margin-left: -6%;
       opacity: .8;
       @media(max-width: 600px) {
-        padding: 8px 15%;
+        padding: 8px 40px;
       }
     }
 
