--- a/src/less/post.less
+++ b/src/less/post.less
@@ -391,7 +391,7 @@
 			.meta-item {
 				margin: 0 50px 0 0;
 				float: left;
-				font-size: 1em;
+				font-size: 1.2em;
 				display: flex;
 				align-items: center;
 				text-transform: capitalize;
@@ -552,7 +552,6 @@
 			* {
 				font-family: CompassSans-Regular,sans-serif;
 				font-style: normal;
-				font-size: 0.9em;
 				line-height: 1.6;
 			}
 			@media(max-width: 600px) {
@@ -631,7 +630,7 @@
 		width: 100%;
 		@media(max-width: 600px) {
 			margin-top: 0;
-			font-size: 10px;
+			font-size: 14px !important;
 			padding: 10px 0;
 			height: auto;
 			line-height: 1.5;
