--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -13,7 +13,7 @@ function createMediumCard(medium){
   MediumWidget.Init({
     renderTo: '#medium-widget',
     params: {
-      "resource": medium,
+      "resource": 'https://medium.com/' + medium,
       "postsPerLine": 1,
       "limit": 3,
       "picture": "small",
