--- a/partials/widget-medium.hbs
+++ b/partials/widget-medium.hbs
@@ -28,6 +28,8 @@ function createMediumCard(medium){
 client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
   client.callFunction("getGithubUsers", "{{slug}}").then(result => {
     createMediumCard(result.medium)
+    console.log(JSON.stringify(result))
+    if (result.medium) {createMediumCard(result.medium)}
   });
 });
 
