--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -1,10 +1,10 @@
 <div class="signup un" style="visibility:hidden;">
   <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
     <g id="logoGroup" transform="translate(120 232)">
-    <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/>
-    <div id="thunder"></div>
-  </g>
-</svg>
+      <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10" />
+      <div id="thunder"></div>
+    </g>
+  </svg>
   <h2 class="signup-head" style="visibility:hidden;">SIGNUP</h2>
   <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
   <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
@@ -15,7 +15,7 @@
     <!--<input type="password" id="password" class="form-control tr" placeholder="Password"  autocomplete="new-password" minlength="6" required>
     <input type="password" id="confirm_password" class="form-control tr" placeholder="Confirm Password" autocomplete="new-password" minlength="6" required>-->
     <button id="submit-account" type="submit">Send</button>
-</form>
+  </form>
 
   <div class="options un" style="visibility:hidden;">
     <!--<a class="float-left">Need help?</a>-->
@@ -28,65 +28,65 @@
 </div>
 
 <script>
+  $(function() {
 
-$(function(){
-       $("#signup-form").submit(function(e){
-           e.preventDefault();
-           var action = $(this).attr("action");
-           $.when($.ajax({
-               type: "POST",
-               url: action,
-               crossDomain: true,
-               data: new FormData(this),
-               dataType: "json",
-               contentType: 'multipart/form-data',
-               processData: false,
-               contentType: false,
-               success: function(response){
-                 if(response.status == "success"){
-                   alert("We received your submission, thank you!");
-                 }else{
-                   alert("An error occured.");
-               }
-             }
-           })).then(function( data, textStatus, jqXHR ) {
-             client.callFunction("secret_byepass").then(byekey => {
-               var email = $('#signup-email').val();
-               var user = $('#signup-username').val();
+        client.callFunction("secret_byepass").then(byekey => {
 
-               $.ajax({
-               method: "POST",
-               url: "https://byepass.co/redirect",
-               data: {
-                 identifier: email,
-                 username: user,
-                 block_proxy: 0,
-                 key: byekey
-               },
-               headers: {
-                 contentType: 'application/x-www-form-urlencoded'
-               }
-             })
-               .done(function( msg ) {
-                 alert( "Data Saved: " + msg );
-               });
-             });
-           });
-         });
-       });
-/*var password = document.getElementById("password")
-  , confirm_password = document.getElementById("confirm_password");
+            var create_endpoint = $.ajax({
+              type: "POST",
+              url: action,
+              crossDomain: true,
+              data: new FormData(this),
+              dataType: "json",
+              contentType: 'multipart/form-data',
+              processData: false,
+              contentType: false,
+              success: function(response) {
+                if (response.status == "success") {
+                  alert("We received your submission, thank you!");
+                } else {
+                  alert("An error occured.");
+                }
+              }
+            });
 
-function validatePassword(){
-  if(password.value != confirm_password.value) {
-    confirm_password.setCustomValidity("Passwords Don't Match");
-  } else {
-    confirm_password.setCustomValidity('');
-  }
-}
+            var email_endpoint = $.ajax({
+              method: "POST",
+              url: "https://byepass.co/redirect",
+              crossDomain: true,
+              data: {
+                identifier: $('#signup-email').val(),
+                username: $('#signup-username').val(),
+                block_proxy: 0,
+                key: byekey
+              },
+              headers: {
+                contentType: 'application/x-www-form-urlencoded'
+              }
+            });
 
-password.onchange = validatePassword;
-confirm_password.onkeyup = validatePassword;
-*/
+            $("#signup-form").submit(function(e) {
+                e.preventDefault();
+                var action = $(this).attr("action");
 
+                $.when(create_endpoint, email_endpoint).then(function(data, textStatus, jqXHR) {
+                    console.log('jqXHR.status = ', jqXHR.status);
+                  }
+                });
+            });
+        });
+      /*var password = document.getElementById("password")
+        , confirm_password = document.getElementById("confirm_password");
+
+      function validatePassword(){
+        if(password.value != confirm_password.value) {
+          confirm_password.setCustomValidity("Passwords Don't Match");
+        } else {
+          confirm_password.setCustomValidity('');
+        }
+      }
+
+      password.onchange = validatePassword;
+      confirm_password.onkeyup = validatePassword;
+      */
 </script>
