--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -29,10 +29,9 @@
 
 <script>
   $(function() {
-
-        client.callFunction("secret_byepass").then(byekey => {
-
-            var create_endpoint = $.ajax({
+    e.preventDefault();
+    var action = $(this).attr("action");
+        $.ajax({
               type: "POST",
               url: action,
               crossDomain: true,
@@ -50,7 +49,7 @@
               }
             });
 
-            var email_endpoint = $.ajax({
+            /*var email_endpoint = $.ajax({
               method: "POST",
               url: "https://byepass.co/redirect",
               crossDomain: true,
@@ -66,15 +65,13 @@
             });
 
             $("#signup-form").submit(function(e) {
-                e.preventDefault();
-                var action = $(this).attr("action");
+
 
                 $.when(create_endpoint, email_endpoint).then(function(data, textStatus, jqXHR) {
                     console.log('jqXHR.status = ', jqXHR.status);
-                  }
-                });
+                  });
+                });*/
             });
-        });
       /*var password = document.getElementById("password")
         , confirm_password = document.getElementById("confirm_password");
 
