--- a/src/less/login.less
+++ b/src/less/login.less
@@ -252,6 +252,8 @@
   opacity: 0;
   display: none;
   transition: all .3s ease-out;
+  top: 0;
+  z-index: 2;
 
   @media(max-width: 800px) {
     display: none !important;
