--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -31,7 +31,7 @@
 @import 'author-card.less';
 @import 'fonts.less';
 @import 'lightbox.less';
-
+@import 'searchbar.less';
 
 /*====================================================
 	about author and comment and next-prev link
