--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="{{@blog.url}}/public/ghost-sdk.min.js"></script>
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	<script async src="{{asset "/js/includes/jquery.md5.js"}}"></script>
 	{{> mongodb}}
 
 	{{#is "post"}}
@@ -32,7 +33,7 @@
 </head>
 <body class="{{body_class}}">
 	{{! insert header partial}}
-	{{> header}}
+	{{> newheader}}
 	{{> signup2}}
 
 	{{{body}}}
